# mmul-omp-harness-instructional

./: CMakeLists.txt  README.md  benchmark.cpp  dgemm-basic-omp.cpp  dgemm-blas.cpp  dgemm-blocked-omp.cpp  job.in  likwid-stuff.h
